--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.72.4",
     "react-native-screens": "~3.22.0",
     "react-native-safe-area-context": "4.6.3",
-    "@react-native-picker/picker": "2.4.10"
+    "@react-native-picker/picker": "2.4.10",
+    "react-native-maps": "1.7.1",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
