--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "4.6.3",
     "@react-native-picker/picker": "2.4.10",
     "react-native-maps": "1.7.1",
-    "expo-location": "~16.1.0"
+    "expo-location": "~16.1.0",
+    "expo-sqlite": "~11.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
