--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.4",
-    "@react-navigation/native": "^6.1.8",
-    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
@@ -22,9 +21,10 @@
     "expo-navigation-bar": "~2.3.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.4.0",
+    "firebase": "^10.5.2",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
